--- a/styles.css
+++ b/styles.css
@@ -1,17 +1,22 @@
 h1 {
   text-align: center;
 }
-.container{
+.calendar_header{
   width: 600px;
-  padding: 0 10px 0 10px;
+  padding: 0 10px;
+  height: 40px;
+  border: 1px solid black;
+  margin: 0 auto;
+  text-align: center;
+}
+#current_date{
+
+}
+.calendar_container{
+  width: 600px;
+  padding: 0 10px;
   height: 720px;
   border: 1px solid black;
   margin: 0 auto;
   background-color: rgb(231, 231, 231);
-}
-.hours {
-
-}
-.events{
-
 }
