--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,42 @@
 body {
   text-align: center;
+  font-family: "Lato", "Source Sans Pro", Helvetica, "Open Sans", Arial, sans-serif;
+}
+header{
+  background-color: #2a363c;
+  text-align: left;
+  padding: 20px 0;
+}
+.brand img{
+  margin-right: 8px;
+  margin-left: 20px;
+  border: 1px solid white;
+  -moz-border-radius: 4px;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  display: inline-block;
+  padding: 9px 10px 10px;
+  -moz-box-sizing: initial;
+  -webkit-box-sizing: initial;
+  box-sizing: initial;
+  vertical-align: middle;
+  width: 24px;
+  height: 24px;
+}
+.brand {
+  color: white;
+  font-size: 1.2em;
+  font-weight: 300;
+  text-decoration: none;
+  -webkit-font-smooting: antialiased;
+  text-rendering: optimizeLegibility;
+  position: relative;
+
 }
 .calendarHeader{
   width: 600px;
   padding: 0 10px;
   height: 40px;
-  border: 1px solid black;
   margin: 0 auto;
   text-align: center;
 }
@@ -16,7 +47,6 @@ body {
   width: 600px;
   padding: 0 10px;
   height: 720px;
-  border: 1px solid black;
   margin: 0 auto;
   background-color: rgb(231, 231, 231);
   display: inline-block;
