--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,8 @@ header{
   height: 40px;
   margin: 0 auto;
   text-align: center;
+  background-color: white;
+  border-left: 1px solid white;
 }
 #currentDate{
   font-size: 1.75em;
@@ -49,25 +51,45 @@ header{
   height: 720px;
   margin: 0 auto;
   background-color: rgb(231, 231, 231);
+  border-left: 1px solid rgb(214,214,214);
   display: inline-block;
+  font-size: 12px;
 }
 .times{
   width: 50px;
   height: 720px;
   border: 1px solid black;
   display: inline-block;
+  font-size: 12px;
 }
 .headerCalWrapper{
   display: inline-block;
 }
-
 ul,li{
   list-style-type: none;
   margin: 0;
-  padding: 0;
-  font-size: .75em;
+  padding: 2px;
+  font-size: 1em;
+  text-align: right;
+}
+.newEvent span{
+  font-weight: bold;
+  color: rgb(57,88,146);
+}
+.newEvent p{
+  font-size: 1em;
+  color: rgb(124, 124, 124);
 }
 .newEvent{
-  border: 1px solid black;
-
+  border-top: 1px solid rgb(214,214,214);
+  border-right: 1px solid rgb(214,214,214);
+  border-bottom: 1px solid rgb(214,214,214);
+  border-left: 3px solid rgb(57,88,146);
+  display: inline-block;
+  position: relative;
+  top: 0px;
+  left: 0px;
+  margin: 0;
+  padding: 2px;
+  overflow-y: scroll;
 }
