--- a/styles.css
+++ b/styles.css
@@ -34,15 +34,8 @@ header{
 
 }
 .calendarHeader{
-  width: 600px;
-  padding: 0 10px;
-  height: 40px;
-  margin: 0 auto;
+  margin: 10px auto;
   text-align: center;
-  background-color: white;
-  border-left: 1px solid white;
-}
-#currentDate{
   font-size: 1.75em;
 }
 .calendarContainer{
@@ -52,8 +45,9 @@ header{
   margin: 0 auto;
   background-color: rgb(231, 231, 231);
   border-left: 1px solid rgb(214,214,214);
-  display: inline-block;
   font-size: 12px;
+  overflow: auto;
+  position: relative;
 }
 .times{
   width: 50px;
@@ -61,9 +55,6 @@ header{
   border: 1px solid black;
   display: inline-block;
   font-size: 12px;
-}
-.headerCalWrapper{
-  display: inline-block;
 }
 ul,li{
   list-style-type: none;
@@ -85,11 +76,14 @@ ul,li{
   border-right: 1px solid rgb(214,214,214);
   border-bottom: 1px solid rgb(214,214,214);
   border-left: 3px solid rgb(57,88,146);
+  background-color: white;
+  position: absolute;
   display: inline-block;
-  position: relative;
-  top: 0px;
-  left: 0px;
   margin: 0;
-  padding: 2px;
-  overflow-y: scroll;
+  padding: 0 5px;
+  text-align: left;
+  max-width: 90%;
+}
+.clearfix {
+  overflow: auto;
 }
